Displaying how cool my portfolio is

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="personalprojects.html" class="menu-item">Personal Projects</a>
     </div>
     <h1>
-      Alec's Portfolio
+      Alec's Really Cool Portfolio
     </h1>
     <img src="https://cdn.glitch.com/3917a5db-1a13-4a7d-84ac-58904bc77982%2Fmy-etsy-logo.png?v=1605043410901" />
 
