Updated my coding projects page

--- a/codingprojects.html
+++ b/codingprojects.html
@@ -17,7 +17,16 @@
   </head>  
   <body>
     <h1>
-      Helloooo
+      My Coding Projects
     </h1>
+    <h2>
+      Tech for Campaigns
+    </h2>
+    <h3>
+      Eric Holguin for Texas State House Representative
+    </h3>
+    <h3>
+      Michigan House Democrats
+    </h3>
   </body>
 </html>
