--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   </head>  
   <body>
+    <div class="title-container">
+      <a href="index.html" class="title">
+        <h1 class="title">
+          Alec's Really Cool Portfolio
+        </h1>
+      </a>
+    </div>
     <div class="header-menu">
       <a href="about.html" class="menu-item">About Me</a>
       <a href="codingprojects.html" class="menu-item">Coding Projects</a>
       <a href="personalprojects.html" class="menu-item">Personal Projects</a>
     </div>
-    <h1>
-      Alec's Really Cool Portfolio
-    </h1>
-    <img src="https://cdn.glitch.com/3917a5db-1a13-4a7d-84ac-58904bc77982%2Fmy-etsy-logo.png?v=1605043410901" />
 
   </body>
 </html>
